Changes for version 0.1 - released 2011/xx/yy

*General:

This is the first version to be based on the Pake build tool.

Advantages, compared to the ant version:
. it does not depend on ANT anymore. This means it does not depend on java, either
. simpler bootstrap process: download a single php file, execute it
. out of the box support for sources on git repositories
. does not need python to generate html out of rst
. can generate md5 checksums on windows without the need for external tools

Other changes:
. the package.xml file is updated the same way as ezinfo.php is
. Makefile files are not removed automatically (use the files.to_remove option to have them deleted)
. Beside the ant directory, .git, build, dist and pake dirs are also excluded from the build
. No support for building packages extensions yet
. A zip file can be built beside a tarball
. Source repo can be a local folder, besides git and svn
. Configuration file is now pake/options-$ext.yaml instead of ant/$ext.properties.
  A build task is available to automatically convert the old format to the new one